# EdgeDetectViewer

./: README.md  local.properties
app/: build.gradle.kts  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/: main.ts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/edgedetectviewer/: MainActivity.kt
app/app/src/main/java/com/example/edgedetectviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/layout/: activity_main .xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/gradle/web/: index.html  package.json  viewer.ts
app/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  native-lib.cpp
web/: index.html  package-lock.json
